# pauper-backend

./: CHANGELOG.md  README.md  pauper-backend.cabal
app/: Main.hs
src/: Server.hs
src/Api/: Handler.hs  Types.hs
src/App/: Config.hs
src/App/AppM/: Database.hs  Logging.hs  Type.hs
src/Database/: Types.hs
src/Logging/: Logger.hs  Types.hs
