cabal-version:      2.4
name:               pauper-backend
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Pauperisti Anonimi

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

library
    exposed-modules:  App.Config
                      App.AppM
                      App.AppM.Type
                      App.AppM.Database
                      App.AppM.Logging
                      Database.Types
                      Logging.Logger
                      Logging.Types
                      Api.Types
                      Api.Handler
                      Server

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0
                    , aeson
                    , bytestring
                    -- , containers
                    -- , cryptohash-sha256
                    -- , hscuid
                    -- , http-client
                    -- , http-client-tls
                    -- , microlens
                    , fast-logger
                    , jose
                    , mtl
                    , optparse-applicative
                    , postgresql-simple
                    , qm-interpolated-string
                    , servant
                    , servant-auth
                    , servant-auth-server
                    , servant-server
                    -- , servant-client
                    -- , table-layout
                    , text
                    , time
                    -- , uuid
                    -- , wai
                    , warp
 
    hs-source-dirs:   src
    default-language: Haskell2010

executable pauper-backend
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.16.4.0,
        pauper-backend

    hs-source-dirs:   app
    default-language: Haskell2010
